--- a/dedicated/Home.html
+++ b/dedicated/Home.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html style="font-size: 16px">
   <head>
+    <!-- Google verification -->
     <meta
       name="google-site-verification"
       content="R03TwZldwg815xFfb-EhMpv0vtklJ3rC-kvSeGlC54Q"
     />
     <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-TJVFF9B');</script>
-  <!-- End Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-TJVFF9B");
+    </script>
+    <!-- End Google Tag Manager -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta name="keywords" content="The future of tech in Botswana" />
@@ -57,9 +65,16 @@
   </head>
   <body class="u-body">
     <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TJVFF9B"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-TJVFF9B"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <!-- header starts -->
     <header class="u-clearfix u-header u-header" id="sec-a427">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://twitter.com/Kevstar0" class="u-image u-logo u-image-1">
@@ -106,6 +121,7 @@
               </svg>
             </a>
           </div>
+          <!-- nav-->
           <div class="u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1">
               <li class="u-nav-item">
@@ -225,6 +241,7 @@
                       href="./pages/Shop.html"
                       >Shop</a
                     >
+                    <!-- End of Nav -->
                   </li>
                 </ul>
               </div>
@@ -233,7 +250,9 @@
           </div>
         </nav>
       </div>
+      <!-- End of header -->
     </header>
+    <!-- body text section -->
     <section
       class="
         u-align-center-sm
@@ -302,6 +321,7 @@
         data-image-width="1200"
         data-image-height="801"
       />
+      <!-- action section -->
       <div class="u-list u-list-1">
         <div class="u-repeater u-repeater-1">
           <div
@@ -583,6 +603,7 @@
         </div>
       </div>
     </section>
+    <!-- AI section -->
     <section class="u-clearfix u-section-2" id="sec-fd15">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div
@@ -624,6 +645,7 @@
                   </p>
                 </div>
               </div>
+              <!-- AI mic -->
               <div
                 class="
                   u-align-left
@@ -694,7 +716,6 @@
         </div>
       </div>
     </section>
-
     <footer
       class="u-align-left u-clearfix u-footer u-grey-80 u-footer"
       id="sec-e226"
