changed index txt

--- a/dedicated/Home.html
+++ b/dedicated/Home.html
@@ -269,13 +269,11 @@
         What does it do?
       </h1>
       <p class="u-text u-text-2">
-        I am probably one of the laziest people on earth, I love enjoying my
-        time on coding, music and binge anime. so I made this website which I
-        personally use whenever I have to do something, summon any internet
-        services, order food online, research or even command your device to
-        open a specific app/ webpage. if the app is not available on your device
-        or our database it'll ask you if it should search for it, download &
-        install it for you!
+        Hello there welcome to Kevstar your all in 1 stop to purchase goods and
+        services anywhere in Botswana. Apply for travel permits, buy food,
+        clothes, cars, houses you name it and I'll get it for you. Think of it
+        as Google for Botswana but better. Although in the near future we'll be
+        expanding to other countries for more accesability and to reach our goal of 100% efficiency in service delivery.
         <a
           href="./pages/services.html"
           class="
@@ -292,7 +290,7 @@
           "
           >It is worth it. Try it!</a
         >. With the power of HTML5 & CSS these 2 combined computing languages
-        allows me to service you and simultaneiously entertain you! how cool.<br />
+        allows me to service you and simultaneiously entertain you whenever wherever you're! how cool.<br />
         <br />Image from
         <a
           href=""
