--- a/dedicated/pages/About.html
+++ b/dedicated/pages/About.html
@@ -3,7 +3,7 @@
   <head>
     <title>About Pablo</title>
     <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
@@ -14,18 +14,18 @@
     <meta name="keywords" content="Smart ecosystem" />
     <meta name="description" content="About smart world" />
     <meta name="page_type" content="np-template-header-footer-from-plugin" />
-    <link rel="stylesheet" href="nicepage.css" media="screen" />
-    <link rel="stylesheet" href="About.css" media="screen" />
+    <link rel="stylesheet" href="./styles/nicepage.css" media="screen" />
+    <link rel="stylesheet" href="./styles/About.css" media="screen" />
     <script
       class="u-script"
       type="text/javascript"
-      src="jquery-1.9.1.min.js"
+      src="./Javascripts/jquery-1.9.1.min.js"
       defer=""
     ></script>
     <script
       class="u-script"
       type="text/javascript"
-      src="nicepage.js"
+      src="./Javascripts/nicepage.js"
       defer=""
     ></script>
     <link
