--- a/dedicated/pages/ewallet.html
+++ b/dedicated/pages/ewallet.html
@@ -14,18 +14,18 @@
     <meta name="description" content="" />
     <meta name="page_type" content="np-template-header-footer-from-plugin" />
     <title>Home</title>
-    <link rel="stylesheet" href="nicepage.css" media="screen" />
-    <link rel="stylesheet" href="services.css" media="screen" />
+    <link rel="stylesheet" href="./styles/nicepage.css" media="screen" />
+    <link rel="stylesheet" href="./styles/services.css" media="screen" />
     <script
       class="u-script"
       type="text/javascript"
-      src="jquery-1.9.1.min.js"
+      src="./Javascripts/jquery-1.9.1.min.js"
       defer=""
     ></script>
     <script
       class="u-script"
       type="text/javascript"
-      src="nicepage.js"
+      src="./Javascripts/nicepage.js"
       defer=""
     ></script>
     <link
