--- a/dedicated/pages/Shop.html
+++ b/dedicated/pages/Shop.html
@@ -24,18 +24,18 @@
     <meta name="description" content="" />
     <meta name="page_type" content="np-template-header-footer-from-plugin" />
     <title>Shop</title>
-    <link rel="stylesheet" href="nicepage.css" media="screen" />
-    <link rel="stylesheet" href="Shop.css" media="screen" />
+    <link rel="stylesheet" href="./styles/nicepage.css" media="screen" />
+    <link rel="stylesheet" href="./styles/Shop.css" media="screen" />
     <script
       class="u-script"
       type="text/javascript"
-      src="jquery-1.9.1.min.js"
+      src="./Javascripts/jquery-1.9.1.min.js"
       defer=""
     ></script>
     <script
       class="u-script"
       type="text/javascript"
-      src="nicepage.js"
+      src="./Javascripts/nicepage.js"
       defer=""
     ></script>
     <link
