--- a/dedicated/Home.html
+++ b/dedicated/Home.html
@@ -26,18 +26,18 @@
     <meta name="description" content="" />
     <meta name="page_type" content="np-template-header-footer-from-plugin" />
     <title>Home</title>
-    <link rel="stylesheet" href="./pages/nicepage.css" media="screen" />
-    <link rel="stylesheet" href="Home.css" media="screen" />
+    <link rel="stylesheet" href="./pages/styles/nicepage.css" media="screen" />
+    <link rel="stylesheet" href="./pages/styles/Home.css" media="screen" />
     <script
       class="u-script"
       type="text/javascript"
-      src="./pages/jquery-1.9.1.min.js"
+      src="./pages/Javascripts/jquery-1.9.1.min.js"
       defer=""
     ></script>
     <script
       class="u-script"
       type="text/javascript"
-      src="./pages/nicepage.js"
+      src="./pages/Javascripts/nicepage.js"
       defer=""
     ></script>
     <link
@@ -273,7 +273,8 @@
         services anywhere in Botswana. Apply for travel permits, buy food,
         clothes, cars, houses you name it and I'll get it for you. Think of it
         as Google for Botswana but better. Although in the near future we'll be
-        expanding to other countries for more accesability and to reach our goal of 100% efficiency in service delivery.
+        expanding to other countries for more accesability and to reach our goal
+        of 100% efficiency in service delivery.
         <a
           href="./pages/services.html"
           class="
@@ -290,7 +291,8 @@
           "
           >It is worth it. Try it!</a
         >. With the power of HTML5 & CSS these 2 combined computing languages
-        allows me to service you and simultaneiously entertain you whenever wherever you're! how cool.<br />
+        allows me to service you and simultaneiously entertain you whenever
+        wherever you're! how cool.<br />
         <br />Image from
         <a
           href=""
