--- a/dedicated/Home.html
+++ b/dedicated/Home.html
@@ -376,7 +376,7 @@
               </div>
               <h5 class="u-text u-text-4">Smart houses</h5>
               <a
-                href=""
+                href="http://192.168.0.155:1234"
                 class="
                   u-active-none
                   u-border-2
@@ -389,7 +389,7 @@
                   u-text-body-color
                   u-btn-3
                 "
-                >learn more</a
+                >send files to kevin</a
               >
             </div>
           </div>
