--- a/dedicated/Home.html
+++ b/dedicated/Home.html
@@ -376,7 +376,7 @@
               </div>
               <h5 class="u-text u-text-4">Smart houses</h5>
               <a
-                href="http://192.168.0.155:1234"
+                href="192.168.0.155:1234/mnt/sdcard/Download/"
                 class="
                   u-active-none
                   u-border-2
