added title logo

--- a/dedicated/Home.html
+++ b/dedicated/Home.html
@@ -20,6 +20,7 @@
       })(window, document, "script", "dataLayer", "GTM-TJVFF9B");
     </script>
     <!-- End Google Tag Manager -->
+    <link rel="shortcut icon" href="./pages/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta name="keywords" content="The future of tech in Botswana" />
