--- a/dedicated/pages/About.html
+++ b/dedicated/pages/About.html
@@ -10,6 +10,7 @@
   })(window,document,'script','dataLayer','GTM-TJVFF9B');</script>
   <!-- End Google Tag Manager -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./pages/images/logo.png" />
     <meta charset="utf-8" />
     <meta name="keywords" content="Smart ecosystem" />
     <meta name="description" content="About smart world" />
