--- a/dedicated/pages/Shop.html
+++ b/dedicated/pages/Shop.html
@@ -26,6 +26,7 @@
     <title>Shop</title>
     <link rel="stylesheet" href="./styles/nicepage.css" media="screen" />
     <link rel="stylesheet" href="./styles/Shop.css" media="screen" />
+    <link rel="shortcut icon" href="./pages/images/logo.png" />
     <script
       class="u-script"
       type="text/javascript"
