--- a/dedicated/pages/ewallet.html
+++ b/dedicated/pages/ewallet.html
@@ -10,6 +10,7 @@
   })(window,document,'script','dataLayer','GTM-TJVFF9B');</script>
   <!-- End Google Tag Manager -->
     <meta charset="utf-8" />
+    <link rel="shortcut icon" href="./pages/images/logo.png" />
     <meta name="keywords" content="The future of tech in Botswana" />
     <meta name="description" content="" />
     <meta name="page_type" content="np-template-header-footer-from-plugin" />
