--- a/dedicated/pages/services.html
+++ b/dedicated/pages/services.html
@@ -12,6 +12,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Connected Botswana">
     <meta name="description" content="services in Botswana">
+    <link rel="shortcut icon" href="./pages/images/logo.png" />
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Services</title>
     <link rel="stylesheet" href="./styles/nicepage.css" media="screen">
