--- a/dedicated/pages/Contact.html
+++ b/dedicated/pages/Contact.html
@@ -14,6 +14,7 @@
     <meta name="description" content="" />
     <meta name="page_type" content="np-template-header-footer-from-plugin" />
     <title>Contact</title>
+    <link rel="shortcut icon" href="./pages/images/logo.png" />
     <link rel="stylesheet" href="./styles/nicepage.css" media="screen" />
     <link rel="stylesheet" href="./styles/Contact.css" media="screen" />
     <script
