--- a/dedicated/Home.html
+++ b/dedicated/Home.html
@@ -377,7 +377,7 @@
               </div>
               <h5 class="u-text u-text-4">Smart houses</h5>
               <a
-                href="http://192.168.0.155:1234/mnt/sdcard/Download/"
+                href=""
                 class="
                   u-active-none
                   u-border-2
@@ -390,7 +390,7 @@
                   u-text-body-color
                   u-btn-3
                 "
-                >send files to kevin</a
+                >Learn more</a
               >
             </div>
           </div>
