--- a/dedicated/pages/Contact.html
+++ b/dedicated/pages/Contact.html
@@ -3,12 +3,19 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-TJVFF9B');</script>
-  <!-- End Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-TJVFF9B");
+    </script>
+    <!-- End Google Tag Manager -->
     <meta charset="utf-8" />
     <meta name="keywords" content="Kevstar's author" />
     <meta name="description" content="" />
@@ -50,9 +57,15 @@
   </head>
   <body class="u-body">
     <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TJVFF9B"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-TJVFF9B"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header class="u-clearfix u-header u-header" id="sec-a427">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="../Home.html" class="u-image u-logo u-image-1">
@@ -184,16 +197,12 @@
                   "
                 >
                   <li class="u-nav-item">
-                    <a
-                      class="u-button-style u-nav-link"
-                      href="../Home.html"
+                    <a class="u-button-style u-nav-link" href="../Home.html"
                       >Home</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a
-                      class="u-button-style u-nav-link"
-                      href="About.html"
+                    <a class="u-button-style u-nav-link" href="About.html"
                       >About</a
                     >
                   </li>
@@ -239,7 +248,7 @@
               >
               <input
                 type="text"
-                placeholder="Kevin"
+                placeholder="Name"
                 id="name-f82f"
                 name="name"
                 class="
@@ -254,9 +263,24 @@
               >
               <input
                 type="email"
-                placeholder="enter your email address"
+                placeholder="Email"
                 id="email-f82f"
                 name="email"
+                class="
+                  u-border-1 u-border-grey-30 u-input u-input-rectangle u-white
+                "
+                required=""
+              />
+            </div>
+            <div class="u-form-email u-form-group">
+              <label for="email-f82f" class="u-form-control-hidden u-label"
+                >Phone</label
+              >
+              <input
+                type="Number"
+                placeholder="Phone number"
+                id="email-f82f"
+                name="phone"
                 class="
                   u-border-1 u-border-grey-30 u-input u-input-rectangle u-white
                 "
