adding login, register & other pages

--- a/dedicated/pages/About.html
+++ b/dedicated/pages/About.html
@@ -270,7 +270,7 @@
                     programmed into connecting Batswana professionally and casually by helping them find their full potential with high online encryption <em>protecting</em> them from online dangers such as hackers nor the govt because this website and it's children apps are run by a single AI created by an unknown entity
                     meaning to say the AI is a digital software hosted online with access to the entire web thus has no need nor has a valid reason to sell or disribute your personal data since it's code is monitored closely by local trusted developers countrywide. Buy or sell any kinds of goods on Kevstar, connect with brands, potential clients and partners through Kevstar!<br></br>
                   </p>
-                  <a href="" class="u-btn u-button-style u-btn-1">Get started</a>
+                  <a href="register.html" class="u-btn u-button-style u-btn-1">Get started</a>
                 </div>
               </div>
             </div>
