--- a/dedicated/Home.html
+++ b/dedicated/Home.html
@@ -724,5 +724,20 @@
       <div class="u-clearfix u-sheet u-sheet-1"></div>
     </footer>
     <section class="u-backlink u-clearfix u-grey-80"></section>
+    <!-- firebase -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/8.6.7/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="/__/firebase/8.6.7/firebase-analytics.js"></script>
+
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
+    <script src="/__/firebase/8.6.7/firebase-app.js"></script>
+    <script src="/__/firebase/8.6.7/firebase-analytics.js"></script>
+    <script src="/__/firebase/8.6.7/firebase-firestore.js"></script>
+    <script src="/__/firebase/8.6.7/firebase-database.js"></script>
+    <script src="/__/firebase/8.6.7/firebase.js"></script>
   </body>
 </html>
