--- a/dedicated/pages/register.html
+++ b/dedicated/pages/register.html
@@ -42,8 +42,17 @@
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <% import firebase_admin from firebase_admin import credentials cred =
-    credentials.Certificate("path/to/serviceAccountKey.json")
-    firebase_admin.initialize_app(cred)%>
+    credentials.Certificate("./Javascripts/aqueous-encoder-301807-firebase-adminsdk-yz1mh-f5d0fa983b.json")
+    firebase_admin.initialize_app(cred) %> 
+    
+<!-- added firebased admin access -->
+    <script { FileInputStream
+    serviceAccount = new FileInputStream("path/to/serviceAccountKey.json");
+    FirebaseOptions options = new FirebaseOptions.Builder()
+    .setCredentials(GoogleCredentials.fromStream(serviceAccount)) .build();
+    FirebaseApp.initializeApp(options); }
+
+    <section class="admin access"></section>
 
     <!-- firebase -->
     <!-- The core Firebase JS SDK is always required and must be listed first -->
