--- a/dedicated/Home.html
+++ b/dedicated/Home.html
@@ -26,7 +26,7 @@
     <meta name="keywords" content="The future of tech in Botswana" />
     <meta name="description" content="" />
     <meta name="page_type" content="np-template-header-footer-from-plugin" />
-    <title>Home</title>
+    <title>Mother</title>
     <link rel="stylesheet" href="./pages/styles/nicepage.css" media="screen" />
     <link rel="stylesheet" href="./pages/styles/Home.css" media="screen" />
     <script
@@ -267,15 +267,15 @@
       id="carousel_0422"
     >
       <h1 class="u-custom-font u-font-montserrat u-text u-text-1">
-        What does it do?
+        What about Mother?
       </h1>
       <p class="u-text u-text-2">
-        Hello there welcome to Kevstar your all in 1 stop to purchase goods and
-        services anywhere in Botswana. Apply for travel permits, buy food,
-        clothes, cars, houses you name it and I'll get it for you. Think of it
-        as Google for Botswana but better. Although in the near future we'll be
-        expanding to other countries for more accesability and to reach our goal
-        of 100% efficiency in service delivery.
+        Mother is an AI that gets you whatever you need whenever you need it,
+        either be some advice, documents, music, videos/ movies, apps,
+        transportation or even ask Mother to do a specific function according to
+        your needs/ wants. Mother works by representing you in the online world
+        enabling her to be able to buy goods and services on your behalf
+        whenever youre too busy to do it yourself.
         <a
           href="./pages/services.html"
           class="
@@ -291,9 +291,9 @@
             u-btn-1
           "
           >It is worth it. Try it!</a
-        >. With the power of HTML5 & CSS these 2 combined computing languages
-        allows me to service you and simultaneiously entertain you whenever
-        wherever you're! how cool.<br />
+        >. With the power of HTML5, Javascript & CSS these combined computing
+        languages allows me to service you and simultaneiously entertain you
+        whenever wherever you're! how cool.<br />
         <br />Image from
         <a
           href=""
@@ -309,7 +309,7 @@
             u-text-body-color
             u-btn-2
           "
-          >Kevin's image choices</a
+          >Author's image choices</a
         >
         <br />
       </p>
@@ -377,7 +377,7 @@
               </div>
               <h5 class="u-text u-text-4">Smart houses</h5>
               <a
-                href=""
+                href="./pages/SmartHouse.html"
                 class="
                   u-active-none
                   u-border-2
@@ -446,7 +446,7 @@
               </div>
               <h5 class="u-text u-text-6">Smart schools & businesses</h5>
               <a
-                href=".pages/About.html"
+                href="./pages/Smartenterprise.html"
                 class="
                   u-active-none
                   u-border-2
@@ -513,7 +513,7 @@
                   </h1>
                 </div>
               </div>
-              <h5 class="u-text u-text-8">Auto life for everyone</h5>
+              <h5 class="u-text u-text-8">more about Mother</h5>
               <a
                 href=""
                 class="
@@ -582,9 +582,9 @@
                   </h1>
                 </div>
               </div>
-              <h5 class="u-text u-text-10">Job oppotunities with us</h5>
+              <h5 class="u-text u-text-10">Oppotunities with us</h5>
               <a
-                href=""
+                href="./pages/oppotunities.html"
                 class="
                   u-active-none
                   u-border-2
