--- a/dedicated/pages/register/registration-form.html
+++ b/dedicated/pages/register/registration-form.html
@@ -43,7 +43,8 @@
     </div>
   </div>
 </div>
-
+<p align="center"><em> note this website is optimized for countries in the SADC region only</em></p>
+<br>
   <div class="form-group"> 
   <label class="col-md-4 control-label">Country of residence</label>
     <div class="col-md-4 selectContainer">
@@ -74,7 +75,7 @@
   <div class="col-md-4 inputGroupContainer">
   <div class="input-group">
   <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-  <input  name="user_name" placeholder="Username" class="form-control"  type="text">
+  <input  name="user_name" placeholder="Choose a username (@User)" class="form-control"  type="text">
     </div>
   </div>
 </div>
@@ -122,7 +123,7 @@
     <div class="col-md-4 inputGroupContainer">
     <div class="input-group">
         <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
-  <input name="contact_no" placeholder="(639)" class="form-control" type="text">
+  <input name="contact_no" placeholder="(+267)" class="form-control" type="text">
     </div>
   </div>
 </div>
