--- a/dedicated/pages/register/registration-form.html
+++ b/dedicated/pages/register/registration-form.html
@@ -140,6 +140,17 @@
     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<button  type="submit" class="btn btn-warning" a href="">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSUBMIT <span class="glyphicon glyphicon-send"></span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</button>
   </div>
 </div>
+<div class="">
+  <label for="" class=""></label>
+  <div><br>
+  <button align="left" a href="../login/login.html">Login</button></div>
+</div>
+
+<div class="">
+  <label for="" class=""></label>
+  <div><br>
+  <button align="right">cancel</button></div>
+</div>
 
 </fieldset>
 </form>
