--- a/dedicated/Home.html
+++ b/dedicated/Home.html
@@ -291,9 +291,9 @@
             u-btn-1
           "
           >It is worth it. Try it!</a
-        >. With the power of HTML5, Javascript & CSS these combined computing
-        languages allows me to service you and simultaneiously entertain you
-        whenever wherever you're! how cool.<br />
+        >. With the power of Tensors & HTML5 these combined computing languages
+        allows me to service you and simultaneiously entertain you whenever
+        wherever you're! how cool.<br />
         <br />Image from
         <a
           href=""
@@ -513,7 +513,7 @@
                   </h1>
                 </div>
               </div>
-              <h5 class="u-text u-text-8">more about Mother</h5>
+              <h5 class="u-text u-text-8">More about Mother</h5>
               <a
                 href="./pages/About.html"
                 class="
@@ -636,9 +636,7 @@
                     u-container-layout u-valign-middle u-container-layout-1
                   "
                 >
-                  <h3 class="u-text u-text-1">
-                    Try the personal live AI<br />
-                  </h3>
+                  <h3 class="u-text u-text-1">Try Mother<br /></h3>
                   <p class="u-text u-text-2">
                     I can get anything for you, just say your wish after
                     activating your mic with the mic button on the right (under
