--- a/dedicated/Home.html
+++ b/dedicated/Home.html
@@ -582,7 +582,7 @@
                   </h1>
                 </div>
               </div>
-              <h5 class="u-text u-text-10">Oppotunities with us</h5>
+              <h5 class="u-text u-text-10">Oppotunities with Mother</h5>
               <a
                 href="./pages/oppotunities.html"
                 class="
