--- a/dedicated/pages/oppotunities.html
+++ b/dedicated/pages/oppotunities.html
@@ -20,7 +20,7 @@
     <meta name="description" content="" />
     <meta name="page_type" content="np-template-header-footer-from-plugin" />
     
-    <link rel="shortcut icon" href="./pages/images/logo.png" />
+    <link rel="shortcut icon" href="./images/logo.png" />
     <link rel="stylesheet" href="./styles/nicepage.css" media="screen" />
     <link rel="stylesheet" href="./styles/Contact.css" media="screen" />
     <script
