--- a/dedicated/pages/login.html
+++ b/dedicated/pages/login.html
@@ -172,7 +172,57 @@
     <script src="vendor/daterangepicker/daterangepicker.js"></script>
     <!--===============================================================================================-->
     <script src="vendor/countdowntime/countdowntime.js"></script>
+
+    <!-- added firebased admin access -->
+    <script { FileInputStream serviceAccount = new
+    FileInputStream("./pages/login/js/client_secret_1012545270359-4hjo0u3ipf9iq1evjr84p4422s26eghq.apps.googleusercontent.com.json");
+    FirebaseOptions options = new FirebaseOptions.Builder()
+    .setCredentials(GoogleCredentials.fromStream(serviceAccount)) .build();
+    FirebaseApp.initializeApp(options); }
+
+    <section class="admin access"></section>
+
+    <!-- firebase -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/8.6.7/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+   https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="/__/firebase/8.6.7/firebase-analytics.js"></script>
+
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
     <!--===============================================================================================-->
     <script src="js/main.js"></script>
+
+    <script>
+      $(function () {
+        var people = [];
+
+        $.getJSON(
+          "./pages/login/js/client_secret_1012545270359-4hjo0u3ipf9iq1evjr84p4422s26eghq.apps.googleusercontent.com.json",
+          function (data) {
+            $.each(data.person, function (i, f) {
+              var tblRow =
+                "<tr>" +
+                "<td>" +
+                f.firstName +
+                "</td>" +
+                "<td>" +
+                f.lastName +
+                "</td>" +
+                "<td>" +
+                f.job +
+                "</td>" +
+                "<td>" +
+                f.roll +
+                "</td>" +
+                "</tr>";
+              $(tblRow).appendTo("#userdata tbody");
+            });
+          }
+        );
+      });
+    </script>
   </body>
 </html>
