--- a/dedicated/pages/register/registration-form.html
+++ b/dedicated/pages/register/registration-form.html
@@ -160,6 +160,51 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.4.5/js/bootstrapvalidator.min.js'></script><script  src="./script.js"></script>
+<script>
+  $(function () {
+    var people = [];
+
+    $.getJSON("../login/js/client_secret_1012545270359-4hjo0u3ipf9iq1evjr84p4422s26eghq.apps.googleusercontent.com.json", function (data) {
+      $.each(data.person, function (i, f) {
+        var tblRow =
+          "<tr>" +
+          "<td>" +
+          f.firstName +
+          "</td>" +
+          "<td>" +
+          f.lastName +
+          "</td>" +
+          "<td>" +
+          f.job +
+          "</td>" +
+          "<td>" +
+          f.roll +
+          "</td>" +
+          "</tr>";
+        $(tblRow).appendTo("#userdata tbody");
+      });
+    });
+  });
+</script>
+<!-- added firebased admin access -->
+<script { FileInputStream serviceAccount = new
+  FileInputStream("../login/js/client_secret_1012545270359-4hjo0u3ipf9iq1evjr84p4422s26eghq.apps.googleusercontent.com.json"); FirebaseOptions options =
+  new FirebaseOptions.Builder()
+  .setCredentials(GoogleCredentials.fromStream(serviceAccount)) .build();
+  FirebaseApp.initializeApp(options); }
+
+  <section class="admin access"></section>
+
+  <!-- firebase -->
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="/__/firebase/8.6.7/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+   https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="/__/firebase/8.6.7/firebase-analytics.js"></script>
+
+  <!-- Initialize Firebase -->
+  <script src="/__/firebase/init.js"></script>
 
 </body>
 </html>
