added checkbox for policies

--- a/dedicated/pages/login.html
+++ b/dedicated/pages/login.html
@@ -135,9 +135,13 @@
                 class="input-checkbox100"
                 id="ckb1"
                 type="checkbox"
-                name="remember-me"
+                name="Policy check"
               />
-              <label class="label-checkbox100" for="ckb1"> Remember me </label>
+              <label class="label-checkbox100" for="ckb1">
+                <a href="Policy.html"
+                  >By logging in i accept Kevstar’s terms & conditions</a
+                >
+              </label>
             </div>
 
             <div class="container-login100-form-btn">
