--- a/dedicated/pages/register/registration-form.html
+++ b/dedicated/pages/register/registration-form.html
@@ -146,6 +146,20 @@
   <button align="left" a href="../login/login.html">Login</button></div>
 </div>
 
+<div class="contact100-form-checkbox">
+  <input
+    class="input-checkbox100"
+    id="ckb1"
+    type="checkbox"
+    name="Policy check"
+  />
+  <label class="label-checkbox100" for="ckb1">
+    <a href="Policy.html"
+      >By logging in i accept Kevstar’s terms & conditions</a
+    >
+  </label>
+</div>
+
 <div class="">
   <label for="" class=""></label>
   <div><br>
