reposition and text edit

--- a/dedicated/pages/register/registration-form.html
+++ b/dedicated/pages/register/registration-form.html
@@ -132,6 +132,19 @@
 
 <!-- Success message -->
 <div class="alert alert-success" role="alert" id="success_message">Success <i class="glyphicon glyphicon-thumbs-up"></i> Success!.</div>
+<div class="contact100-form-checkbox">
+  <input
+    class="input-checkbox100"
+    id="ckb1"
+    type="checkbox"
+    name="Policy check"
+  />
+  <label class="label-checkbox100" for="ckb1">
+    <a href="Policy.html"
+      >By registering I accept Kevstar’s terms & conditions</a
+    >
+  </label>
+</div>
 
 <!-- Button -->
 <div class="form-group">
@@ -144,20 +157,6 @@
   <label for="" class=""></label>
   <div><br>
   <button align="left" a href="../login/login.html">Login</button></div>
-</div>
-
-<div class="contact100-form-checkbox">
-  <input
-    class="input-checkbox100"
-    id="ckb1"
-    type="checkbox"
-    name="Policy check"
-  />
-  <label class="label-checkbox100" for="ckb1">
-    <a href="Policy.html"
-      >By logging in i accept Kevstar’s terms & conditions</a
-    >
-  </label>
 </div>
 
 <div class="">
