--- a/dedicated/pages/login.html
+++ b/dedicated/pages/login.html
@@ -139,7 +139,7 @@
               />
               <label class="label-checkbox100" for="ckb1">
                 <a href="Policy.html"
-                  >By logging in i accept Kevstar’s terms & conditions</a
+                  >By logging in I accept Kevstar’s terms & conditions</a
                 >
               </label>
             </div>
