--- a/dedicated/pages/login.html
+++ b/dedicated/pages/login.html
@@ -138,9 +138,8 @@
                 name="Policy check"
               />
               <label class="label-checkbox100" for="ckb1">
-                <a href="Policy.html"
-                  >By logging in I accept Kevstar’s terms & conditions</a
-                >
+                By logging in I accept Kevstar’s
+                <a href="Policy.html">terms & conditions</a>
               </label>
             </div>
 
