--- a/dedicated/pages/register/registration-form.html
+++ b/dedicated/pages/register/registration-form.html
@@ -140,8 +140,8 @@
     name="Policy check"
   />
   <label class="label-checkbox100" for="ckb1">
-    <a href="Policy.html"
-      >By registering I accept Kevstar’s terms & conditions</a
+    By registering I accept Kevstar’s <a href="Policy.html"
+      >terms & conditions</a
     >
   </label>
 </div>
