--- a/dedicated/pages/register/registration-form.html
+++ b/dedicated/pages/register/registration-form.html
@@ -139,7 +139,7 @@
     type="checkbox"
     name="Policy check"
   />
-  <label class="label-checkbox100" for="ckb1">
+  <label class="label-checkbox100" for="ckb1" align="center">
     By registering I accept Kevstar’s <a href="Policy.html"
       >terms & conditions</a
     >
