--- a/dedicated/pages/Enterprises.html
+++ b/dedicated/pages/Enterprises.html
@@ -9,13 +9,12 @@
     <html style="font-size: 16px">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="utf-8" />
-        <meta name="keywords" content="Kevstar's author" />
+        <meta name="keywords" content="Kevstar's marketplace" />
         <meta name="description" content="" />
         <meta
           name="page_type"
           content="np-template-header-footer-from-plugin"
         />
-        <title>Contact</title>
         <link rel="shortcut icon" href="./pages/images/logo.png" />
         <link rel="stylesheet" href="./styles/nicepage.css" media="screen" />
         <link rel="stylesheet" href="./styles/Contact.css" media="screen" />
@@ -264,11 +263,14 @@
                   <div class="item"><img src="./images/choppies.png" alt="choppies"></div>
                   <div class="item"><img src="./images/woolworths.png" alt=""></div>
                   <div class="item"><img src="./images/spar.png" alt=""></div>
-                  <div class="item"><img src="./images/debonairs.png" alt=""></div>
+                  <div class="item"><img src="./images/debonairs.png" alt=""></div></section>
+                  <br>
+                  <h3 align="center">NOTICE to clients & partners</h3>
+                  <p align="center">Due to high tax rates 12% of all sale transactions that occur within Mother will be deducted from sales of established bussinesses, enterprises/ companies in favour of Batswana/ personal accounts</p>
+                  <p align="center">We at Mother understand our users mostly in Botswana are barely making it through Covid times thus tax rates will be focused on every seller <em>only within our network</em> rather than the clients.</p>
+                  <p align="center">Dear clients due to third party policies of our partners expect random change rises & drops in prices across every product and services hosted in Mother but such changes will occur through familiar communication channels of each partner in collab with Mother</p>
                   <main>
-              </body>
-          </section>
-
+                  </body>
       </body>
     </html>
   </head>
